--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-component-lib",
   "version": "1.0.0",
-  "description": "A simple component library built with Rollup and Emotion.js",
+  "description": "Component library built with Rollup",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -10,38 +10,51 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "rollup -c -w",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
-  "keywords": [
-    "react",
-    "component",
-    "emotion"
-  ],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@storybook/addon-docs": "^7.1.0",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-storysource": "^7.1.0",
+    "@storybook/addon-styling": "^1.3.4",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/nextjs": "^7.1.0",
+    "@storybook/react": "^7.1.0",
+    "@storybook/react-webpack5": "^7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@types/react": "^19.1.3",
     "rollup": "^2.79.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "storybook": "^7.1.0",
+    "string-width": "^7.2.0",
+    "tslib": "^2.6.0",
+    "typescript": "5.1.6"
   },
   "peerDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "dayjs": "^1.11.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "dayjs": "^1.11.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-datepicker": "^7.6.0",
+    "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-spinners": "^0.17.0"
   }
 }
