--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,18 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx", // "react" 대신 사용
-    "jsxImportSource": "react", // Emotion 대신 React를 사용
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
     "module": "ESNext",
+    "resolveJsonModule": true,    
+    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationDir": "dist",
     "sourceMap": true,
     "outDir": "dist",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
+    "strictNullChecks": true,
+    "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
       "@ComponentFarm/*": ["./src/components/*"],
@@ -22,9 +24,8 @@
       "@InterfaceFarm/*": ["./src/interface/*"],
       "@UtilFarm/*": ["./util/*"],
       "@HookFarm/*": ["./src/hook/*"],
-      "@MobxFarm/*": ["./src/mobx/*"],
-      "@PagesFarm/*": ["./pages/*"],   
-    },
+      "@MobxFarm/*": ["./src/mobx/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
