필요없는 파일 지움. package.json 이름 변경. 호스트 테스트 정상.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-component-lib",
+  "name": "gopizza-design-system",
   "version": "1.0.0",
   "description": "Component library built with Rollup",
   "main": "dist/index.js",
