--- a/package.json
+++ b/package.json
@@ -49,10 +49,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "dayjs": "^1.11.10",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-datepicker": "^7.6.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
     "react-spinners": "^0.17.0"
