--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "moduleResolution": "node",
     "strictNullChecks": true,
     "isolatedModules": true,
+    "noImplicitAny": false,
     "baseUrl": ".",
     "paths": {
       "@ComponentFarm/*": ["./src/components/*"],
