--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^19.1.3",
     "rollup": "^2.79.2",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-url": "^3.0.1",
     "storybook": "^7.1.0",
     "string-width": "^7.2.0",
     "tslib": "^2.6.0",
@@ -54,12 +56,16 @@
     "dayjs": "^1.11.10",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
+    "framer-motion": "^12.10.5",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
-    "react-spinners": "^0.17.0"
+    "react-select": "^5.10.1",
+    "react-spinners": "^0.17.0",
+    "sanitize-html": "^2.16.0"
   }
 }
