--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
     "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@storybook/addon-docs": "^7.1.0",
@@ -31,9 +32,11 @@
     "@storybook/react-webpack5": "^7.1.0",
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^19.1.3",
+    "@types/react-datepicker": "4.11.2",
     "rollup": "^2.79.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-url": "^3.0.1",
     "storybook": "^7.1.0",
@@ -53,19 +56,23 @@
     "@emotion/styled": "^11.14.0",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "framer-motion": "^12.10.5",
     "react": "^18.3.1",
-    "react-datepicker": "^7.6.0",
+    "react-datepicker": "4.16.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.4.0",
+    "react-js-pagination": "^3.0.3",
     "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
     "react-select": "^5.10.1",
     "react-spinners": "^0.17.0",
-    "sanitize-html": "^2.16.0"
+    "sanitize-html": "^2.16.0",
+    "@table-library/react-table-library": "^4.1.4"
   }
 }
