--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
@@ -31,8 +33,14 @@
     "@storybook/react": "^7.1.0",
     "@storybook/react-webpack5": "^7.1.0",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.3",
     "@types/react-datepicker": "4.11.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "rollup": "^2.79.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -41,6 +49,8 @@
     "rollup-plugin-url": "^3.0.1",
     "storybook": "^7.1.0",
     "string-width": "^7.2.0",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.0",
     "typescript": "5.1.6"
   },
@@ -51,9 +61,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+  "resolutions": {
+    "strip-ansi": "6.0.1"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@table-library/react-table-library": "^4.1.4",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "date-fns": "^2.30.0",
@@ -72,7 +86,6 @@
     "react-query": "^3.39.3",
     "react-select": "^5.10.1",
     "react-spinners": "^0.17.0",
-    "sanitize-html": "^2.16.0",
-    "@table-library/react-table-library": "^4.1.4"
+    "sanitize-html": "^2.16.0"
   }
 }
