--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "svg-to-base64": "node scripts/svg-to-base64.js"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
@@ -45,6 +46,7 @@
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-url": "^3.0.1",
     "storybook": "^7.1.0",
@@ -71,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "date-fns": "^2.30.0",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.0",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "framer-motion": "^12.10.5",
